# map-segmentation-2025

./: .gitignore  LICENSE  README.md  gpu_test.py  pyproject.toml  requirements.txt  run.py
configs/: config_segment.yaml
scripts/: add_metadata_to_model.py
src/: train.py
src/datamodules/: segmentation_data_module.py
src/datamodules/datasets/: nonPermeableSeg_dataset.py  test_visualization.py
src/losses/: focal_dice_loss.py  focal_loss.py
src/metrics/: dice_metric.py  iou_metric.py
src/models/: segmenter.py  segmenter_visualizate_utils.py
src/utils/: utils.py
