[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "map-segmentation-2025"
version = "0.1.0"
description = "Segmentation project based on PUTvision/LandCoverSeg"
authors = ["Konrad Makowski <konrad.makowski.1@put.poznan.pl>", "Jan Lubina <jan.lubina@student.put.poznan.pl>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/spicyholo/map-segmentation-2025"
repository = "https://github.com/spicyholo/map-segmentation-2025.git"
keywords = ["segmentation", "pytorch", "deep learning"]

[tool.poetry.dependencies]
python = ">=3.8"
torch = {version = "*", source = "torch_cuda"}
torchvision = {version = "*", source = "torch_cuda"}
torchaudio = {version = "*", source = "torch_cuda"}
pytorch-lightning = "*"
torchmetrics = "*"
hydra-core = "*"
hydra-colorlog = "*"
hydra-optuna-sweeper = "*"
neptune = "*"
onnx = "*"
onnxsim = "*"
pre-commit = "*"
black = "*"
isort = "*"
flake8 = "*"
zarr = "*"
python-dotenv = "*"
rich = "*"
pytest = "*"
sh = "*"
scikit-learn = "*"
jupyterlab = "*"
opencv-python = "*"
albumentations = "*"
segmentation-models-pytorch = "*"
monai = "*"
matplotlib = "*"

[[tool.poetry.source]]
name = "torch_cuda"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"